--- a/css/index.css
+++ b/css/index.css
@@ -137,14 +137,14 @@ header .menu .sub li {border-top: 1px solid #fff; padding:20px 0; background-col
 .sec7 .box2 {background-image: url(../img/b6-2.png); width:100vw; height:16.7vh;}
 .sec7 .box3 {background-image: url(../img/b6-3.png); width:100vw; height:16.7vh;}
 .sec7 .box4 {background-image: url(../img/b6-4.png); width:100vw; height:16.7vh;}
-.sec7 .box1 h1 {color:#fff; font-size: 30px; text-align: center; padding-top:170px;}
+.sec7 .box1 h1 {color:#fff; font-size: 30px; text-align: center; padding-top:15vh;}
 .sec7 .box1 p {color:#fff; font-size: 23px; text-align: center; margin-top:15px;}
-.sec7 .box2 h1 {color:orange; font-size:30px; margin-left:30px; padding-top:20px;}
-.sec7 .box2 p {color:#fff; text-align: right; margin-right:30px; line-height: 22px; margin-top:15px;}
-.sec7 .box3 h1 {color:yellow; font-size:30px; margin-left:30px; padding-top:20px;}
-.sec7 .box3 p {color:#fff; text-align: right; margin-right:30px; line-height: 22px; margin-top:15px;}
-.sec7 .box4 h1 {color:greenyellow; font-size:30px; margin-left:30px; padding-top:20px;}
-.sec7 .box4 p {color:#fff; text-align: right; margin-right:30px; line-height: 22px; margin-top:15px;}
+.sec7 .box2 h1 {color:orange; font-size:27px; margin-left:25px; padding-top:1vh;}
+.sec7 .box2 p {color:#fff; text-align: right; margin-right:30px; line-height: 22px; margin-top:1vh;}
+.sec7 .box3 h1 {color:yellow; font-size:27px; margin-left:25px; padding-top:1vh;}
+.sec7 .box3 p {color:#fff; text-align: right; margin-right:30px; line-height: 22px; margin-top:1vh;}
+.sec7 .box4 h1 {color:greenyellow; font-size:27px; margin-left:25px; padding-top:1vh;}
+.sec7 .box4 p {color:#fff; text-align: right; margin-right:30px; line-height: 22px; margin-top:1vh;}
 .footer-wrap {width:100vw; background-color: #222;}
 .footer-wrap .footer {height:160px;}
 .footer-wrap .footer ul {width:360px; display:flex; margin:0 auto;}
